--- a/omar.css
+++ b/omar.css
@@ -1,6 +1,7 @@
 .assign-1-shape-1{
- color:white;
- width:50%;
+ color:rgb(14, 13, 13);
+ width:400px;
+ height: 400px;
  background-color: blueviolet;   
  padding: 20px;
  text-align: center;
@@ -9,11 +10,15 @@
  margin-left: 300px;
  margin-bottom: 50px;
  border:5px solid black;
+ background-image: url(416.gif);
  
+ background-size: cover;
+ background-repeat: no-repeat;
 }
 .assign-1-shape-2{
-    color:white;
-    width:50%;
+    color:black;
+    width:400px;
+    height: 400px;
     background-color:blueviolet;   
     padding: 20px;
     text-align: center;
@@ -22,11 +27,16 @@
     margin-left: 300px;
     margin-bottom: 50px;
     border:5px solid black;
-    opacity: .5;
+    opacity: 1;
+    background-image: url(416.gif);
+ background-position: right center;
+ background-size: 5cm;
+ background-repeat:repeat-y;
 }
 .assign-1-shape-3{
-    color:white;
-    width:50%;
+    color:black;
+    width:400px;
+    height: 400px;
     background-color: blueviolet;  
     padding: 20px;
     text-align: center;
@@ -35,5 +45,27 @@
     margin-left: 300px; 
     margin-bottom: 50px;
     border:5px solid black;
-    opacity: .3;
+    opacity: .9;
+    background-image: url(416.gif);
+ background-position: bottom center;
+ background-size:5cm;
+ background-repeat:repeat-x;
+}
+.assign-2-shape-4{
+    color:black;
+    width:400px;
+    height: 400px;
+    background-color: blueviolet;  
+    padding: 20px;
+    text-align: center;
+    border-radius: 15px;
+    font-size: 35px;
+    margin-left: 300px; 
+    margin-bottom: 50px;
+    border:5px solid black;
+    opacity: .8;  
+    background-image: url(416.gif);
+    background-position: right center;
+    background-size:5cm;
+    background-repeat:repeat; 
 }
