--- a/omar.css
+++ b/omar.css
@@ -69,3 +69,65 @@
     background-size:5cm;
     background-repeat:repeat; 
 }
+.shape1{
+    width:300px;
+    height: 300px;
+    background-color: rgb(216, 20, 13); 
+    display: inline-block;
+    margin-right: 50px;
+    margin-top:50px;
+    padding: 30px;
+    border:30px solid blue;
+    outline: 20px solid rgb(35, 231, 9);
+}
+.shape2{
+    width:300px;
+    height: 300px;
+    background-color: rgb(216, 20, 13); 
+    display: inline-block;
+    margin-right: 50px;
+    margin-top:50px;
+    padding: 30px;
+    border-color:blue green ;
+border-width: 30px;
+    border-style:solid;
+    outline: 20px solid rgb(35, 231, 9);
+}
+.shape3{
+    width:300px;
+    height: 300px;
+    background-color: rgb(216, 20, 13); 
+    display: inline-block;  
+    margin-right: 50px;
+    margin-top:50px;
+    padding: 30px;
+    text-align: center;
+    border-color:blue green blueviolet black ;
+    border-width: 30px;
+        border-style:dashed;
+        outline: 20px solid rgb(35, 231, 9);
+}
+.shape4{
+    width:400px;
+    background-color: silver;
+    border-left: 10px solid blue;
+    font-size: 40px;
+    margin-top: 20px;
+}
+.shape6{
+   margin-top: 20px;
+        width:400px;
+        background-color: silver;
+        border-left: 10px solid rgb(9, 107, 14);
+        font-size: 40px;
+    
+}
+.shape5{
+    margin-top: 20px;
+    width:400px;
+    background-color: silver;
+    border-left: 10px solid rgb(9, 107, 14);
+    font-size: 40px;
+    visibility: hidden;
+
+}
