--- a/omar.css
+++ b/omar.css
@@ -249,3 +249,287 @@ body{
     font-size: bold;
        font-size: 7vw;
 }
+.container div{
+ padding-top: 15px;
+padding-bottom: 15px;
+text-align: center;
+background-color: chocolate;
+margin-left:15px;
+width:calc((740px-60px)/3);
+float:left;
+
+}
+.container{
+    background-color: palegoldenrod;
+    overflow: hidden;
+    width:800px;
+}
+.clear{
+    clear: both;
+}
+body{
+    margin: 0;
+   
+}
+.box {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .one {
+    flex: 1 1 auto;
+  }
+
+  .two {
+    flex: 1 1 auto;
+  }
+
+  .three {
+    flex: 1 1 auto;
+  }
+  .green,.red,.blue,.black{
+      width: 300px;
+      height: 300px;
+      position: absolute;
+  }
+  .green{
+      background-color: green;
+      z-index: 4;
+      top:170px;
+      left:170px;
+  }
+  .red{
+      background-color: red;
+      z-index: 5;
+      top:200px;
+      left:200px;
+     
+  }
+  .blue{
+      background-color: blue;
+      z-index: 3;
+      top:140px;
+      left:140px;
+  }
+  .black{
+      background-color: black;
+      top:200px;
+      left:200px;
+      z-index: 2;
+      top:170px;
+      left:140px
+  }
+  .phargraph1{
+      width: 400px;
+      font-size: 30px;
+      position: relative;
+      left:600px;
+      padding:20px;
+      background-color: rgb(136, 252, 19); 
+      width:700px;
+      border-top:5px solid rgb(112, 13, 13);
+      border-bottom: 5px solid blueviolet;
+      border-left: 5px solid red;
+      border-right: 5px solid salmon;
+      position:relative;
+
+  }
+  .top-left{
+      width:50px;
+      height: 50px;
+position: absolute;
+background-color: rgb(136, 252, 19);
+left:-30px;
+top:-30px;
+text-align: center;
+border-bottom: 5px solid red;
+border-right: 5px solid rgb(112, 13, 13);
+  }
+  .bottom-left{
+      width:50px;
+      height:50px;
+      position:absolute;
+      background-color: rgb(136, 252, 19);
+      border-right: 5px solid blueviolet;
+      left:-30px;
+      top:160px;
+      border-top: 5px solid red;
+      text-align: center;
+  }
+  .top-right{
+width:50px;
+ height:50px;
+      position:absolute;
+      background-color: rgb(136, 252, 19);
+      left:710px;
+      top:-30px;
+      border-left: 5px solid rgb(112, 13, 13);
+      border-bottom: 5px solid salmon;
+      text-align: center;
+  }
+  .bottom-right{
+    width:50px;
+    height:50px;
+         position:absolute;
+         background-color: rgb(136, 252, 19);
+         left:720px;
+         top:160px;
+         border-top: 5px solid salmon;
+        border-left:5px solid blueviolet;
+        text-align: center;
+  }
+  .ol1{
+      background-color: #eee;
+      font-size: 30px;
+      list-style-position: outside;
+      list-style: decimal;
+      
+
+     
+    
+  }
+  
+  li{
+      background-color: white;
+      margin-bottom: 20px;
+      margin-top: 20px;
+      font-size: 30px;
+  }
+  .ol2{
+    background-color: #eee;
+    font-size: 30px;
+    list-style-position: outside;
+    list-style:upper-roman;
+    
+  }
+  .ul2{
+      list-style:circle;
+      background-color: #eee;
+      margin-bottom:20px;
+      margin-top:20px;
+  }
+  .one1,.none,.three3{
+      width:300px;
+      height: 60px;
+      margin-top: 50px;
+     position: relative;
+     left:50%;
+     padding-top: 25px;
+     
+     font-size: 30px;
+  }
+  .one1,.three3{
+      background-color:#ccc;
+      text-align: center;
+  }
+  .none{
+      background-color: red;
+      text-align: center;
+  }
+  .zero1{
+     position: relative;
+     width: 700px;
+     height: 100px;
+     font-size: 30px;
+     left:50%;
+     align-items: center;
+     text-align: center;
+background-color: gold;
+margin-bottom: 20px;
+  }
+  .zero1 h4{
+      position: absolute;
+      right:8%;
+  }
+  .zero1::before{
+      content:counter(members-counter);
+      position: absolute;
+      background-color: red;
+      color:white;
+      width:40px;
+      height: 40px;
+      font-weight: bold;
+      text-align: center;
+      left:-25px;
+      top:31px;
+
+
+  }
+  .container2{
+margin-bottom: 20px;
+counter-increment: members-counter;
+  }
+  .container3 p{
+    position: relative;
+    width: 700px;
+    height: 50px;
+    font-size: 30px;
+    left:50%;
+
+    text-align: center;
+    padding: 30px;
+    font-size: 35px;
+background-color: gold;
+margin-bottom: 20px;
+  }
+  .container3 p::before{
+     content: attr(data-person); 
+     position: absolute;
+      background-color: red;
+      color:white;
+      width:144px;
+      height: 50px;
+      font-weight: bold;
+      text-align: center;
+      left:-272px;
+      top:-1px;
+      padding: 30px;
+
+  }
+p::after{
+      content: "";
+      position: absolute;
+      width:10px;
+      height: 100%;
+      left:-12px;
+      top:0px;
+      background-color: deepskyblue;
+  }
+  .container3{
+      position: relative;
+  }
+  .container3 p::after{
+      content: "";
+      width: 0px;
+      height: 0px;
+      background-color: green;
+      position: absolute;
+      right:-20px;
+      top:50%;
+      margin-top:-10px;
+      border-style: solid;
+
+      border-color: transparent red transparent transparent;
+  }
+  .pp{
+    position: relative;
+    width: 700px;
+    height: 50px;
+    font-size: 30px;
+    left:50%;
+    text-align: center;
+    padding: 30px;
+    font-size: 35px;
+background-color: gold;
+margin-bottom: 20px; 
+  }
+  .pp::after{
+      content:"";
+      position: absolute;
+      background-color: green;
+      right:-20px;
+      top:-10px;
+      margin-top:-10px;
+      width: 50px;
+      height: 50px;
+  }
