--- a/omar2.css
+++ b/omar2.css
@@ -221,7 +221,9 @@ text-align: center;
     grid-template-rows:100px auto ;
     /* row-gap: 20px;
     column-gap:20px ; */
-    gap: 20px 20px;
+    gap: 10px 10px;
+    justify-content:stretch;
+    align-content:stretch;
   }
   .grid div{
     background-color: lightslategray;
